[package]
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "zk-SNARK library"
readme = "README.md"
homepage = "https://github.com/ebfull/bellman"
license = "MIT/Apache-2.0"
name = "bellman"
repository = "https://github.com/ebfull/bellman"
version = "0.6.0"
edition = "2018"

[dependencies]
bit-vec = "0.6.3"
blake2s_simd = "1.0"
ff = { version = "0.6", path = "../ff" }
futures = "0.1"
futures-cpupool = { version = "0.1", optional = true }
group = { version = "0.6", path = "../group" }
num_cpus = { version = "1", optional = true }
crossbeam = { version = "0.8.2", optional = true }
pairing = { version = "0.16", path = "../pairing", optional = true }
rand_core = "0.6.4"
byteorder = "1"

[dev-dependencies]
hex-literal = "0.3.4"
rand = "0.8.5"
rand_xorshift = "0.3.0"
sha2 = "0.10.6"

[features]
groth16 = ["pairing"]
multicore = ["futures-cpupool", "crossbeam", "num_cpus"]
default = ["groth16", "multicore"]

[[test]]
name = "mimc"
path = "tests/mimc.rs"
required-features = ["groth16"]

[badges]
maintenance = { status = "actively-developed" }
