[package]
name = "zcash_primitives"
description = "Rust implementations of the Zcash primitives"
version = "0.2.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
homepage = "https://github.com/zcash/librustzcash"
repository = "https://github.com/zcash/librustzcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
aes = "0.8.2"
blake2b_simd = "1.0"
blake2s_simd = "1.0"
byteorder = "1"
crypto_api_chachapoly = "0.5.0"
ff = { version = "0.6", path = "../ff" }
fpe = "0.5"
hex = "0.4"
lazy_static = "1"
log = "0.4"
pairing = { version = "0.16", path = "../pairing" }
rand = "0.8.5"
rand_core = "0.6.4"
ripemd160 = { version = "0.10", optional = true }
secp256k1 = { version = "=0.26.0", optional = true }
sha2 = "0.10"

[dev-dependencies]
hex-literal = "0.3"
rand_xorshift = "0.3.0"

[features]
transparent-inputs = ["ripemd160", "secp256k1"]

[badges]
maintenance = { status = "actively-developed" }
