[package]
name = "zcash_proofs"
description = "Zcash zk-SNARK circuits and proving APIs"
version = "0.2.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
homepage = "https://github.com/zcash/librustzcash"
repository = "https://github.com/zcash/librustzcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bellman = { version = "0.6", path = "../bellman", default-features = false, features = ["groth16"] }
blake2b_simd = "1.0"
byteorder = "1"
directories = { version = "4", optional = true }
ff = { version = "0.6", path = "../ff" }
pairing = { version = "0.16", path = "../pairing" }
rand_core = "0.6.4"
zcash_primitives = { version = "0.2", path = "../zcash_primitives" }

[dev-dependencies]
rand_xorshift = "0.3.0"

[features]
default = ["local-prover", "multicore"]
local-prover = ["directories"]
multicore = ["bellman/multicore"]

[badges]
maintenance = { status = "actively-developed" }
